--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css"
   </head>
-
   <body>
     <!-- Логотип и навигация -->
     <header class="nav-and-contacts">
@@ -103,21 +102,21 @@
           <ul class="list about-us">
             <li class="item">
               <img
-                src="./img/img.png"
+                src="./images/1.jpg"
                 alt="Процесс программирования"
                 width="370"
               />
             </li>
             <li class="item">
               <img
-                src="./img/img1.png"
+                src="./images/2.jpg"
                 alt="Мобильная адаптация программы"
                 width="370"
               />
             </li>
             <li class="item">
               <img
-                src="./img/img2.png"
+                src="./images/3.jpg"
                 alt="Подбор цветов на планшете"
                 width="370"
               />
@@ -134,7 +133,7 @@
             <li class="item">
               <img
                 class="indent-pic"
-                src="./img/Demyanenko.jpg"
+                src="./images/igor-demianenko.jpg"
                 alt="Фото Игоря Демьяненко"
                 width="270"
               />
@@ -145,7 +144,7 @@
             <li class="item">
               <img
                 class="indent-pic"
-                src="./img/Repina.jpg"
+                src="./images/olha-repina.jpg"
                 alt="Фото Ольги Репиной"
                 width="270"
               />
@@ -156,7 +155,7 @@
             <li class="item">
               <img
                 class="indent-pic"
-                src="./img/Tarasoff.jpg"
+                src="./images/nikolay-tarasov.jpg"
                 alt="Фото Николая Тарасова"
                 width="270"
               />
@@ -167,7 +166,7 @@
             <li class="item">
               <img
                 class="indent-pic"
-                src="./img/Ermakof.jpg"
+                src="./images/michail-ermakov.jpg"
                 alt="Фото Михаила Ермакова"
                 width="270"
               />
