--- a/portfolio.html
+++ b/portfolio.html
@@ -12,9 +12,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./css/style.css"
   </head>
-
   <body>
     <!-- Навигация и контакты -->
     <header class="nav-and-contacts">
@@ -76,7 +75,7 @@
               <a class="link" href="">
                 <img
                   class="img-portfolio"
-                  src="./img/Technokryak.jpg"
+                  src="./images/img.jpg"
                   alt="Страница сайта"
                   width="370"
                 />
@@ -91,7 +90,7 @@
               <a class="link" href="">
                 <img
                   class="img-portfolio"
-                  src="./img/NewOrlean.jpg"
+                  src="./images/portfolio-2.jpg"
                   alt="Постер баскетбольного мачта"
                   width="370"
                 />
@@ -107,7 +106,7 @@
               <a class="link" href="">
                 <img
                   class="img-portfolio"
-                  src="./img/Seafood.jpg"
+                  src="./images/portfolio-3.jpg"
                   alt="Лого ресторана"
                   width="370"
                 />
@@ -121,7 +120,7 @@
               <a class="link" href="">
                 <img
                   class="img-portfolio"
-                  src="./img/Prime.jpg"
+                  src="./images/portfolio-4.jpg"
                   alt="Наушники"
                   width="370"
                 />
@@ -135,7 +134,7 @@
               <a class="link" href="">
                 <img
                   class="img-portfolio"
-                  src="./img/Boxes.jpg"
+                  src="./images/portfolio-5.jpg"
                   alt="Коробки"
                   width="370"
                 />
@@ -149,7 +148,7 @@
               <a class="link" href="">
                 <img
                   class="img-portfolio"
-                  src="./img/Inspiration.jpg"
+                  src="./images/portfolio-6.jpg"
                   alt="Монитор"
                   width="370"
                 />
@@ -163,7 +162,7 @@
               <a class="link" href="">
                 <img
                   class="img-portfolio"
-                  src="./img/LimitedEdition.jpg"
+                  src="./images/portfolio-7.jpg"
                   alt="Книга"
                   width="370"
                 />
@@ -177,7 +176,7 @@
               <a class="link" href="">
                 <img
                   class="img-portfolio"
-                  src="./img/Lab.jpg"
+                  src="./images/portfolio-8.jpg"
                   alt="Брелок"
                   width="370"
                 />
@@ -191,7 +190,7 @@
               <a class="link" href="">
                 <img
                   class="img-portfolio"
-                  src="./img/GrowingBusiness.jpg"
+                  src="./images/portfolio-9.jpg"
                   alt="Ноутбук"
                   width="370"
                 />
