--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
           <a href="" class="white-text link button"> Заказать услугу </a>
         </div>
       </section>
+      <!-- Вставляю 4 SVG картинки -->
 
       <!-- 2-я секция - список преимуществ -->
       <section class="wrap-why-we">
