--- a/index.html
+++ b/index.html
@@ -63,28 +63,28 @@
         <div class="container">
           <h2 class="hidden-title">Наши преимущества</h2>
           <ul class="list list-why-we">
-            <li class="item">
+            <li class="item description icon-antenna">
               <h3 class="subtitle-why-we">Внимание к деталям</h3>
               <p class="text mg-zero">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li class="item">
+            <li class="item description icon-clock">
               <h3 class="subtitle-why-we">Пунктуальность</h3>
               <p class="text mg-zero">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li class="item">
+            <li class="item description icon-diagram">
               <h3 class="subtitle-why-we">Планирование</h3>
               <p class="text mg-zero">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li class="item">
+            <li class="item description icon-astronaut">
               <h3 class="subtitle-why-we">Современные технологии</h3>
               <p class="text mg-zero">
                 Значимость этих проблем настолько очевидна, что реализация
