--- a/index.html
+++ b/index.html
@@ -63,28 +63,50 @@
         <div class="container">
           <h2 class="hidden-title">Наши преимущества</h2>
           <ul class="list list-why-we">
-            <li class="item description icon-antenna">
+            <li class="item description icon">
+              <div class="icon-container">
+                <svg class="icon-size">
+                  <use href="./images/svg/symbol-defs.svg#icon-antenna-1"></use>
+                </svg>
+              </div>
               <h3 class="subtitle-why-we">Внимание к деталям</h3>
               <p class="text mg-zero">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li class="item description icon-clock">
+            <li class="item description icon">
+              <div class="icon-container">
+                <svg class="icon-size">
+                  <use href="./images/svg/symbol-defs.svg#icon-clock-1"></use>
+                </svg>
+              </div>
               <h3 class="subtitle-why-we">Пунктуальность</h3>
               <p class="text mg-zero">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li class="item description icon-diagram">
+            <li class="item description icon">
+              <div class="icon-container">
+                <svg class="icon-size">
+                  <use href="./images/svg/symbol-defs.svg#icon-diagram-1"></use>
+                </svg>
+              </div>
               <h3 class="subtitle-why-we">Планирование</h3>
               <p class="text mg-zero">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li class="item description icon-astronaut">
+            <li class="item description icon">
+              <div class="icon-container">
+                <svg class="icon-size">
+                  <use
+                    href="./images/svg/symbol-defs.svg#icon-astronaut-1"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="subtitle-why-we">Современные технологии</h3>
               <p class="text mg-zero">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -130,7 +152,7 @@
         <div class="container">
           <h2 class="header-section">Наша команда</h2>
           <ul class="list our-team">
-            <li class="item">
+            <li class="item icon-team">
               <img
                 class="indent-pic"
                 src="./images/igor-demianenko.jpg"
@@ -141,7 +163,7 @@
               <h3 class="subtitle-our-team">Игорь Демьяненко</h3>
               <p class="text-our-team">Product Designer</p>
             </li>
-            <li class="item">
+            <li class="item icon-team">
               <img
                 class="indent-pic"
                 src="./images/olha-repina.jpg"
@@ -152,7 +174,7 @@
               <h3 class="subtitle-our-team">Ольга Репина</h3>
               <p class="text-our-team">Frontend Developer</p>
             </li>
-            <li class="item">
+            <li class="item icon-team">
               <img
                 class="indent-pic"
                 src="./images/nikolay-tarasov.jpg"
@@ -163,7 +185,7 @@
               <h3 class="subtitle-our-team">Николай Тарасов</h3>
               <p class="text-our-team">Marketing</p>
             </li>
-            <li class="item">
+            <li class="item icon-team">
               <img
                 class="indent-pic"
                 src="./images/michail-ermakov.jpg"
