comm -new footer icons

--- a/index.html
+++ b/index.html
@@ -37,13 +37,23 @@
         <address class="font-style">
           <ul class="list text contacts">
             <li class="item">
-              <a class="link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
+              <a class="link" href="mailto:info@devstudio.com">
+                <svg class="icon-email">
+                  <use href="./images/social/symbol-defs.svg#icon-mail2"></use>
+                </svg>
+                info@devstudio.com</a
               >
             </li>
-            <li class="item">
-              <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
-            </li>
+            <div class="email">
+              <li class="item">
+                <svg class="icon-mobile">
+                  <use
+                    href="./images/social/symbol-defs.svg#icon-mobile2"
+                  ></use>
+                </svg>
+                <a class="link" href="tel:+380961111111"> +38 096 111 11 11</a>
+              </li>
+            </div>
           </ul>
         </address>
       </div>
@@ -223,6 +233,59 @@
             </li>
           </ul>
         </address>
+      </div>
+      <div class="footer-icon">
+        <h3 class="title title-icon">присоединяйтесь</h3>
+        <ul class="icon-svg">
+          <!-- Instagram -->
+          <li class="icon-svg-list">
+            <a
+              class="icon-set footer-icon-set"
+              href="#"
+              aria-label="Instagram icon"
+            >
+              <svg class="link-svg footer-link-svg">
+                <use href="./img/symbol-defs.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <!-- Twitter -->
+          <li class="icon-svg-list">
+            <a
+              class="icon-set footer-icon-set"
+              href="#"
+              aria-label="twitter icon"
+            >
+              <svg class="link-svg footer-link-svg">
+                <use href="./img/symbol-defs.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <!-- facebook -->
+          <li class="icon-svg-list">
+            <a
+              class="icon-set footer-icon-set"
+              href="#"
+              aria-label="twitter icon"
+            >
+              <svg class="link-svg footer-link-svg">
+                <use href="./img/symbol-defs.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <!-- linkedin -->
+          <li class="icon-svg-list">
+            <a
+              class="icon-set footer-icon-set"
+              href="#"
+              aria-label="twitter icon"
+            >
+              <svg class="link-svg footer-link-svg">
+                <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
