--- a/portfolio.html
+++ b/portfolio.html
@@ -37,12 +37,22 @@
         <address class="font-style">
           <ul class="list text contacts">
             <li class="item">
-              <a class="link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
+              <a class="link" href="mailto:info@devstudio.com">
+                <svg class="icon-email">
+                  <use href="./images/social/symbol-defs.svg#icon-mail2"></use>
+                </svg>
+                info@devstudio.com</a
               >
             </li>
             <li class="item">
-              <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+              <a class="link" href="tel:+380961111111">
+                <svg class="icon-mobile">
+                  <use
+                    href="./images/social/symbol-defs.svg#icon-mobile2"
+                  ></use>
+                </svg>
+                +38 096 111 11 11</a
+              >
             </li>
           </ul>
         </address>
