--- a/index.html
+++ b/index.html
@@ -46,12 +46,13 @@
             </li>
             <div class="email">
               <li class="item">
-                <svg class="icon-mobile">
-                  <use
-                    href="./images/social/symbol-defs.svg#icon-mobile2"
-                  ></use>
-                </svg>
-                <a class="link" href="tel:+380961111111"> +38 096 111 11 11</a>
+                <a class="link" href="tel:+380961111111">
+                  <svg class="icon-mobile">
+                    <use
+                      href="./images/social/symbol-defs.svg#icon-mobile2"
+                    ></use></svg
+                  >+38 096 111 11 11</a
+                >
               </li>
             </div>
           </ul>
@@ -213,79 +214,89 @@
 
     <!-- Футер -->
     <footer class="wrap-footer">
-      <div class="container">
-        <a class="link logo logo-footer-marg" href="./index.html">
-          <span class="accent-color">Web</span
-          ><span class="white-text">Studio</span>
-        </a>
-        <address class="text white-text font-style">
-          <p class="address-marg address-line">
-            г. Киев, пр-т Леси Украинки, 26
-          </p>
-          <ul class="list">
-            <li class="address-marg">
-              <a class="link" href="mailto:info@example.com"
-                >info@example.com</a
+      <div class="container flexbox">
+        <div>
+          <a class="link logo logo-footer-marg" href="./index.html">
+            <span class="accent-color">Web</span
+            ><span class="white-text">Studio</span>
+          </a>
+          <address class="text white-text font-style">
+            <p class="address-marg address-line">
+              г. Киев, пр-т Леси Украинки, 26
+            </p>
+            <ul class="list">
+              <li class="address-marg">
+                <a class="link" href="mailto:info@example.com"
+                  >info@example.com</a
+                >
+              </li>
+              <li class>
+                <a class="link" href="tel:+380991111111">+38 099 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-icon">
+          <h3 class="title title-icon">присоединяйтесь</h3>
+          <ul class="icon-svg">
+            <!-- Instagram -->
+            <li class="icon-svg-list">
+              <a
+                class="icon-set footer-icon-set"
+                href="#"
+                aria-label="Instagram icon"
               >
+                <svg class="link-svg footer-link-svg">
+                  <use
+                    href="./images/social/symbol-defs.svg#icon-instagram"
+                  ></use>
+                </svg>
+              </a>
             </li>
-            <li class>
-              <a class="link" href="tel:+380991111111">+38 099 111 11 11</a>
+            <!-- Twitter -->
+            <li class="icon-svg-list">
+              <a
+                class="icon-set footer-icon-set"
+                href="#"
+                aria-label="twitter icon"
+              >
+                <svg class="link-svg footer-link-svg">
+                  <use
+                    href="./images/social/symbol-defs.svg#icon-twitter"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <!-- facebook -->
+            <li class="icon-svg-list">
+              <a
+                class="icon-set footer-icon-set"
+                href="#"
+                aria-label="twitter icon"
+              >
+                <svg class="link-svg footer-link-svg">
+                  <use
+                    href="./images/social/symbol-defs.svg#icon-facebook"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <!-- linkedin -->
+            <li class="icon-svg-list">
+              <a
+                class="icon-set footer-icon-set"
+                href="#"
+                aria-label="twitter icon"
+              >
+                <svg class="link-svg footer-link-svg">
+                  <use
+                    href="./images/social/symbol-defs.svg#icon-linkedin2"
+                  ></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
-      </div>
-      <div class="footer-icon">
-        <h3 class="title title-icon">присоединяйтесь</h3>
-        <ul class="icon-svg">
-          <!-- Instagram -->
-          <li class="icon-svg-list">
-            <a
-              class="icon-set footer-icon-set"
-              href="#"
-              aria-label="Instagram icon"
-            >
-              <svg class="link-svg footer-link-svg">
-                <use href="./img/symbol-defs.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <!-- Twitter -->
-          <li class="icon-svg-list">
-            <a
-              class="icon-set footer-icon-set"
-              href="#"
-              aria-label="twitter icon"
-            >
-              <svg class="link-svg footer-link-svg">
-                <use href="./img/symbol-defs.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <!-- facebook -->
-          <li class="icon-svg-list">
-            <a
-              class="icon-set footer-icon-set"
-              href="#"
-              aria-label="twitter icon"
-            >
-              <svg class="link-svg footer-link-svg">
-                <use href="./img/symbol-defs.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <!-- linkedin -->
-          <li class="icon-svg-list">
-            <a
-              class="icon-set footer-icon-set"
-              href="#"
-              aria-label="twitter icon"
-            >
-              <svg class="link-svg footer-link-svg">
-                <use href="./img/symbol-defs.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+        </div>
       </div>
     </footer>
   </body>
