--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
                   <svg class="icon-mobile">
                     <use
                       href="./images/social/symbol-defs.svg#icon-mobile2"
-                    ></use></svg
-                  >+38 096 111 11 11</a
+                    ></use>
+                  </svg>
+                  +38 096 111 11 11</a
                 >
               </li>
             </div>
@@ -173,7 +174,52 @@
 
               <h3 class="subtitle-our-team">Игорь Демьяненко</h3>
               <p class="text-our-team">Product Designer</p>
+              <!-- Вставляю разметку для  иконок соцсетей -->
+              <ul class="icon-svg">
+                <!-- Instagram -->
+                <li class="list-team">
+                  <a class="icon-set" href="#" aria-label="Instagram icon">
+                    <svg class="link-svg">
+                      <use
+                        href="./images/clients/symbol-defs.svg#icon-instagram"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <!-- Twitter -->
+                <li class="list-team">
+                  <a class="icon-set" href="#" aria-label="twitter icon">
+                    <svg class="link-svg">
+                      <use
+                        href="./images/clients/symbol-defs.svg#icon-twitter"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <!-- facebook -->
+                <li class="list-team">
+                  <a class="icon-set" href="#" aria-label="twitter icon">
+                    <svg class="link-svg">
+                      <use
+                        href="./images/clients/symbol-defs.svg#icon-facebook"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <!-- linkedin -->
+                <li class="list-team">
+                  <a class="icon-set" href="#" aria-label="twitter icon">
+                    <svg class="link-svg">
+                      <use
+                        href="./images/clients/symbol-defs.svg#icon-linkedin2"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
+            <!-- конец разметки иконок  Игоря демьяненко -->
+
             <li class="item icon-team">
               <img
                 class="indent-pic"
@@ -184,7 +230,52 @@
 
               <h3 class="subtitle-our-team">Ольга Репина</h3>
               <p class="text-our-team">Frontend Developer</p>
+
+              <ul class="icon-svg">
+                <!-- Instagram -->
+                <li class="list-team">
+                  <a class="icon-set" href="#" aria-label="Instagram icon">
+                    <svg class="link-svg">
+                      <use
+                        href="./images/clients/symbol-defs.svg#icon-instagram"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <!-- Twitter -->
+                <li class="list-team">
+                  <a class="icon-set" href="#" aria-label="twitter icon">
+                    <svg class="link-svg">
+                      <use
+                        href="./images/clients/symbol-defs.svg#icon-twitter"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <!-- facebook -->
+                <li class="list-team">
+                  <a class="icon-set" href="#" aria-label="twitter icon">
+                    <svg class="link-svg">
+                      <use
+                        href="./images/clients/symbol-defs.svg#icon-facebook"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <!-- linkedin -->
+                <li class="list-team">
+                  <a class="icon-set" href="#" aria-label="twitter icon">
+                    <svg class="link-svg">
+                      <use
+                        href="./images/clients/symbol-defs.svg#icon-linkedin2"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+              <!-- конец иконок Ольги Репиной  -->
             </li>
+
             <li class="item icon-team">
               <img
                 class="indent-pic"
@@ -195,26 +286,114 @@
 
               <h3 class="subtitle-our-team">Николай Тарасов</h3>
               <p class="text-our-team">Marketing</p>
-            </li>
-            <li class="item icon-team">
-              <img
-                class="indent-pic"
-                src="./images/michail-ermakov.jpg"
-                alt="Фото Михаила Ермакова"
-                width="270"
-              />
-
-              <h3 class="subtitle-our-team">Михаил Ермаков</h3>
-              <p class="text-our-team">UI Designer</p>
+              <!-- начало иконок Николая тарасова  -->
+              <ul class="icon-svg">
+                <!-- Instagram -->
+                <li class="list-team">
+                  <a class="icon-set" href="#" aria-label="Instagram icon">
+                    <svg class="link-svg">
+                      <use
+                        href="./images/clients/symbol-defs.svg#icon-instagram"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <!-- Twitter -->
+                <li class="list-team">
+                  <a class="icon-set" href="#" aria-label="twitter icon">
+                    <svg class="link-svg">
+                      <use
+                        href="./images/clients/symbol-defs.svg#icon-twitter"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <!-- facebook -->
+                <li class="list-team">
+                  <a class="icon-set" href="#" aria-label="twitter icon">
+                    <svg class="link-svg">
+                      <use
+                        href="./images/clients/symbol-defs.svg#icon-facebook"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <!-- linkedin -->
+                <li class="list-team">
+                  <a class="icon-set" href="#" aria-label="twitter icon">
+                    <svg class="link-svg">
+                      <use
+                        href="./images/clients/symbol-defs.svg#icon-linkedin2"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
       </section>
     </main>
 
+    <!-- Постоянные клиенты  -->
+    <section class="section clients">
+      <div class="container">
+        <h2 class="header-section">Постоянные клиенты</h2>
+        <ul class="client flexbox">
+          <li class="icon-client">
+            <a href="" class="icon-hover-link">
+              <svg class="clients-icon" width="44" height="50">
+                <use href="./images/clients/symbol-defs.svg#icon-logo-1"></use>
+              </svg>
+            </a>
+          </li>
+
+          <li class="icon-client">
+            <a href="" class="icon-hover-link">
+              <svg class="clients-icon" width="44" height="50">
+                <use href="./images/clients/symbol-defs.svg#icon-logo-2"></use>
+              </svg>
+            </a>
+          </li>
+
+          <li class="icon-client">
+            <a href="" class="icon-hover-link">
+              <svg class="clients-icon" width="44" height="50">
+                <use href="./images/clients/symbol-defs.svg#icon-logo-3"></use>
+              </svg>
+            </a>
+          </li>
+
+          <li class="icon-client">
+            <a href="" class="icon-hover-link">
+              <svg class="clients-icon" width="44" height="50">
+                <use href="./images/clients/symbol-defs.svg#icon-logo-4"></use>
+              </svg>
+            </a>
+          </li>
+
+          <li class="icon-client">
+            <a href="" class="icon-hover-link">
+              <svg class="clients-icon" width="44" height="50">
+                <use href="./images/clients/symbol-defs.svg#icon-logo-5"></use>
+              </svg>
+            </a>
+          </li>
+
+          <li class="icon-client">
+            <a href="" class="icon-hover-link">
+              <svg class="clients-icon" width="44" height="50">
+                <use href="./images/clients/symbol-defs.svg#icon-logo-6"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </section>
+
     <!-- Футер -->
     <footer class="wrap-footer">
-      <div class="container flexbox">
+      <div class="container">
         <div>
           <a class="link logo logo-footer-marg" href="./index.html">
             <span class="accent-color">Web</span
@@ -240,7 +419,7 @@
           <h3 class="title title-icon">присоединяйтесь</h3>
           <ul class="icon-svg">
             <!-- Instagram -->
-            <li class="icon-svg-list">
+            <li class="list-team">
               <a
                 class="icon-set footer-icon-set"
                 href="#"
@@ -254,7 +433,7 @@
               </a>
             </li>
             <!-- Twitter -->
-            <li class="icon-svg-list">
+            <li class="list-team">
               <a
                 class="icon-set footer-icon-set"
                 href="#"
@@ -268,7 +447,7 @@
               </a>
             </li>
             <!-- facebook -->
-            <li class="icon-svg-list">
+            <li class="list-team">
               <a
                 class="icon-set footer-icon-set"
                 href="#"
@@ -282,7 +461,7 @@
               </a>
             </li>
             <!-- linkedin -->
-            <li class="icon-svg-list">
+            <li class="list-team">
               <a
                 class="icon-set footer-icon-set"
                 href="#"
