--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
     </main>
 
     <!-- Постоянные клиенты  -->
-    <section class="section clients">
+    <section class="section">
       <div class="container">
         <h2 class="header-section">Постоянные клиенты</h2>
         <ul class="client flexbox">
@@ -391,35 +391,38 @@
       </div>
     </section>
 
-    <!-- Футер -->
-    <footer class="wrap-footer">
-      <div class="container">
-        <div>
-          <a class="link logo logo-footer-marg" href="./index.html">
-            <span class="accent-color">Web</span
-            ><span class="white-text">Studio</span>
-          </a>
-          <address class="text white-text font-style">
-            <p class="address-marg address-line">
-              г. Киев, пр-т Леси Украинки, 26
-            </p>
-            <ul class="list">
-              <li class="address-marg">
-                <a class="link" href="mailto:info@example.com"
-                  >info@example.com</a
+    <!-- Footer -->
+    <footer class="background-footer">
+      <div class="conteiner footer-flexbox">
+        <div class="footer-maps">
+          <address class="adress-maps">
+            <ul class="">
+              <li class="info">
+                <a href="./index.html" class="logo norm"
+                  ><span class="logoblue">Web</span
+                  ><span class="logowhait">Studio</span>
+                </a>
+              </li>
+              <li class="info">г. Киев, пр-т Леси Украинки, 26</li>
+              <li class="info">
+                <a class="alfa" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
                 >
               </li>
-              <li class>
-                <a class="link" href="tel:+380991111111">+38 099 111 11 11</a>
+              <li class="info">
+                <a class="alfa" href="tel:+38-096-111-11-11"
+                  >+38 096 111 11 11</a
+                >
               </li>
             </ul>
           </address>
         </div>
+
         <div class="footer-icon">
           <h3 class="title title-icon">присоединяйтесь</h3>
           <ul class="icon-svg">
             <!-- Instagram -->
-            <li class="list-team">
+            <li class="icon-svg-list">
               <a
                 class="icon-set footer-icon-set"
                 href="#"
@@ -427,13 +430,13 @@
               >
                 <svg class="link-svg footer-link-svg">
                   <use
-                    href="./images/social/symbol-defs.svg#icon-instagram"
+                    href="./images/clients/symbol-defs.svg#icon-instagram"
                   ></use>
                 </svg>
               </a>
             </li>
             <!-- Twitter -->
-            <li class="list-team">
+            <li class="icon-svg-list">
               <a
                 class="icon-set footer-icon-set"
                 href="#"
@@ -441,13 +444,13 @@
               >
                 <svg class="link-svg footer-link-svg">
                   <use
-                    href="./images/social/symbol-defs.svg#icon-twitter"
+                    href="./images/clients/symbol-defs.svg#icon-twitter"
                   ></use>
                 </svg>
               </a>
             </li>
             <!-- facebook -->
-            <li class="list-team">
+            <li class="icon-svg-list">
               <a
                 class="icon-set footer-icon-set"
                 href="#"
@@ -455,13 +458,13 @@
               >
                 <svg class="link-svg footer-link-svg">
                   <use
-                    href="./images/social/symbol-defs.svg#icon-facebook"
+                    href="./images/clients/symbol-defs.svg#icon-facebook"
                   ></use>
                 </svg>
               </a>
             </li>
             <!-- linkedin -->
-            <li class="list-team">
+            <li class="icon-svg-list">
               <a
                 class="icon-set footer-icon-set"
                 href="#"
@@ -469,7 +472,7 @@
               >
                 <svg class="link-svg footer-link-svg">
                   <use
-                    href="./images/social/symbol-defs.svg#icon-linkedin2"
+                    href="./images/clients/symbol-defs.svg#icon-linkedin2"
                   ></use>
                 </svg>
               </a>
