--- a/portfolio.html
+++ b/portfolio.html
@@ -215,29 +215,93 @@
       </section>
     </main>
 
-    <!-- Футер -->
-    <footer class="wrap-footer">
-      <div class="container">
-        <a class="link logo logo-footer-marg" href="./index.html">
-          <span class="accent-color">Web</span
-          ><span class="white-text">Studio</span>
-        </a>
-        <div class="grid-contacts">
-          <address class="text white-text font-style">
-            <p class="address-marg address-line">
-              г. Киев, пр-т Леси Украинки, 26
-            </p>
-            <ul class="list">
-              <li class="address-marg">
-                <a class="link" href="mailto:info@example.com"
-                  >info@example.com</a
+    <!-- Footer -->
+    <footer class="background-footer">
+      <div class="conteiner footer-flexbox">
+        <div class="footer-maps">
+          <address class="adress-maps">
+            <ul class="">
+              <li class="info">
+                <a href="./index.html" class="logo norm"
+                  ><span class="logoblue">Web</span
+                  ><span class="logowhait">Studio</span>
+                </a>
+              </li>
+              <li class="info">г. Киев, пр-т Леси Украинки, 26</li>
+              <li class="info">
+                <a class="alfa" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
                 >
               </li>
-              <li>
-                <a class="link" href="tel:+380991111111">+38 099 111 11 11</a>
+              <li class="info">
+                <a class="alfa" href="tel:+38-096-111-11-11"
+                  >+38 096 111 11 11</a
+                >
               </li>
             </ul>
           </address>
+        </div>
+
+        <div class="footer-icon">
+          <h3 class="title title-icon">присоединяйтесь</h3>
+          <ul class="icon-svg">
+            <!-- Instagram -->
+            <li class="icon-svg-list">
+              <a
+                class="icon-set footer-icon-set"
+                href="#"
+                aria-label="Instagram icon"
+              >
+                <svg class="link-svg footer-link-svg">
+                  <use
+                    href="./images/clients/symbol-defs.svg#icon-instagram"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <!-- Twitter -->
+            <li class="icon-svg-list">
+              <a
+                class="icon-set footer-icon-set"
+                href="#"
+                aria-label="twitter icon"
+              >
+                <svg class="link-svg footer-link-svg">
+                  <use
+                    href="./images/clients/symbol-defs.svg#icon-twitter"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <!-- facebook -->
+            <li class="icon-svg-list">
+              <a
+                class="icon-set footer-icon-set"
+                href="#"
+                aria-label="twitter icon"
+              >
+                <svg class="link-svg footer-link-svg">
+                  <use
+                    href="./images/clients/symbol-defs.svg#icon-facebook"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <!-- linkedin -->
+            <li class="icon-svg-list">
+              <a
+                class="icon-set footer-icon-set"
+                href="#"
+                aria-label="twitter icon"
+              >
+                <svg class="link-svg footer-link-svg">
+                  <use
+                    href="./images/clients/symbol-defs.svg#icon-linkedin2"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
