--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
             <li class="item">
               <a class="link" href="mailto:info@devstudio.com">
                 <svg class="icon-email">
-                  <use href="./images/social/symbol-defs.svg#icon-mail2"></use>
+                  <use
+                    href="./images/email,phone/symbol-defs.svg#icon-vector"
+                  ></use>
                 </svg>
                 info@devstudio.com</a
               >
@@ -49,7 +51,7 @@
                 <a class="link" href="tel:+380961111111">
                   <svg class="icon-mobile">
                     <use
-                      href="./images/social/symbol-defs.svg#icon-mobile2"
+                      href="./images/social/symbol-defs.svg#icon-mobile3"
                     ></use>
                   </svg>
                   +38 096 111 11 11</a
@@ -275,7 +277,6 @@
               </ul>
               <!-- конец иконок Ольги Репиной  -->
             </li>
-
             <li class="item icon-team">
               <img
                 class="indent-pic"
@@ -287,6 +288,60 @@
               <h3 class="subtitle-our-team">Николай Тарасов</h3>
               <p class="text-our-team">Marketing</p>
               <!-- начало иконок Николая тарасова  -->
+              <ul class="icon-svg">
+                <!-- Instagram -->
+                <li class="list-team">
+                  <a class="icon-set" href="#" aria-label="Instagram icon">
+                    <svg class="link-svg">
+                      <use
+                        href="./images/clients/symbol-defs.svg#icon-instagram"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <!-- Twitter -->
+                <li class="list-team">
+                  <a class="icon-set" href="#" aria-label="twitter icon">
+                    <svg class="link-svg">
+                      <use
+                        href="./images/clients/symbol-defs.svg#icon-twitter"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <!-- facebook -->
+                <li class="list-team">
+                  <a class="icon-set" href="#" aria-label="twitter icon">
+                    <svg class="link-svg">
+                      <use
+                        href="./images/clients/symbol-defs.svg#icon-facebook"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <!-- linkedin -->
+                <li class="list-team">
+                  <a class="icon-set" href="#" aria-label="twitter icon">
+                    <svg class="link-svg">
+                      <use
+                        href="./images/clients/symbol-defs.svg#icon-linkedin2"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li class="item icon-team">
+              <img
+                class="indent-pic"
+                src="./images/michail-ermakov.jpg"
+                alt="Фото михаила Ермакова"
+                width="270"
+              />
+
+              <h3 class="subtitle-our-team">Михаил Ермаков</h3>
+              <p class="text-our-team">UI designer</p>
+              <!-- начало иконок Михаила Ермакова  -->
               <ul class="icon-svg">
                 <!-- Instagram -->
                 <li class="list-team">
