--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           </ul>
         </div>
       </section>
-
+      <!-- ывыва -->
       <!-- 3-я секция - чем мы занимаемся -->
       <section class="wrap-about-us">
         <div class="container">
