--- a/portfolio.html
+++ b/portfolio.html
@@ -37,23 +37,25 @@
         <address class="font-style">
           <ul class="list text contacts">
             <li class="item">
-              <a class="link" href="mailto:info@devstudio.com">
-                <svg class="icon-email">
-                  <use href="./images/social/symbol-defs.svg#icon-mail2"></use>
+              <a class="link link-addres" href="mailto:info@devstudio.com">
+                <svg class="icon-email hover">
+                  <use
+                    href="./images/symbol-defs2.svg#icon-envelope-hover-1"
+                  ></use>
                 </svg>
                 info@devstudio.com</a
               >
             </li>
-            <li class="item">
-              <a class="link" href="tel:+380961111111">
-                <svg class="icon-mobile">
-                  <use
-                    href="./images/social/symbol-defs.svg#icon-mobile2"
-                  ></use>
-                </svg>
-                +38 096 111 11 11</a
-              >
-            </li>
+            <div class="email">
+              <li class="item link-addres">
+                <a class="link" href="tel:+380961111111">
+                  <svg class="icon-mobile hover">
+                    <use href="./images/symbol-defs2.svg#icon-smartphone"></use>
+                  </svg>
+                  +38 096 111 11 11</a
+                >
+              </li>
+            </div>
           </ul>
         </address>
       </div>
