--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
 
     <!-- Footer -->
     <footer class="background-footer">
-      <div class="conteiner footer-flexbox">
+      <div class="container footer-flexbox">
         <div class="footer-maps">
           <address class="adress-maps">
             <ul class="">
