--- a/portfolio.html
+++ b/portfolio.html
@@ -219,7 +219,7 @@
 
     <!-- Footer -->
     <footer class="background-footer">
-      <div class="conteiner footer-flexbox">
+      <div class="container footer-flexbox">
         <div class="footer-maps">
           <address class="adress-maps">
             <ul class="">
