footer  ind +port

--- a/portfolio.html
+++ b/portfolio.html
@@ -224,7 +224,7 @@
           <address class="adress-maps">
             <ul class="">
               <li class="info">
-                <a href="./index.html" class="logo norm"
+                <a href="./index.html" class="logo norm link"
                   ><span class="logoblue">Web</span
                   ><span class="logowhait">Studio</span>
                 </a>
