--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
       <div class="container footer-flexbox">
         <div class="footer-maps">
           <address class="adress-maps">
-            <ul class="">
+            <ul class="list">
               <li class="info">
                 <a href="./index.html" class="logo norm link"
                   ><span class="logoblue">Web</span
