--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
     <section class="section">
       <div class="container">
         <h2 class="header-section">Постоянные клиенты</h2>
-        <ul class="client flexbox">
+        <ul class="client flexbox list">
           <li class="icon-client">
             <a href="" class="icon-hover-link">
               <svg class="clients-icon" width="44" height="50">
