--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <main>
       <!-- Основное содержимое - секция герой -->
       <section class="wrap-hero">
-        <div class="container banner">
+        <div class="banner">
           <h1 class="header-hero">Эффективные решения для вашего бизнеса</h1>
           <a href="" class="white-text link button"> Заказать услугу </a>
         </div>
